# words

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  flag.rs  main.rs
