[package]
name = "words"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
sqlx = {version ="0.7", features=['sqlite','runtime-tokio-native-tls']}
tokio = { version = "1.20.0", features = ["rt", "macros"]}
anyhow = "1.0"
clap = {version = "3.0.0", features = ["cargo", "wrap_help"]}
